use caching constructors and fix to use shortValue instead of byteValue #325